  snapDir are writeable before starting (Abraham Fine via phunt)

  ZOOKEEPER-2611: zoo_remove_watchers - can remove the wrong watch
  (Eyal Leshmem via rgs)

  ZOOKEEPER-2467: NullPointerException when redo Command is passed negative value
  (Rakesh Kumar Singh via rakeshr)

  ZOOKEEPER-2606: SaslServerCallbackHandler#handleAuthorizeCallback() should log
  the exception (Ted Yu via fpj)

IMPROVEMENTS:

  ZOOKEEPER-2505: Use shared library instead of static library in C
  client unit test (Michael Han via phunt)

  ZOOKEEPER-2489: Upgrade Jetty dependency to a recent stable release
  version. (Edward Ribeiro via phunt)

  ZOOKEEPER-2507: C unit test improvement: line break between
  'ZooKeeper server started' and 'Running' (Michael Han via phunt)

  ZOOKEEPER-2557: Update gitignore to account for other file extensions.
  (Edward Ribeiro via cnauroth)

  ZOOKEEPER-2594: Use TLS for downloading artifacts during build
  (Olaf Flebbe via phunt)

Release 3.5.2 - 06/29/2016

BUGFIXES:

  ZOOKEEPER-2256: Zookeeper is not using specified JMX port in zkEnv.sh
  (Arshad Mohammad via rakeshr)

  ZOOKEEPER-2264: Wrong error message when secureClientPortAddress is
  configured but secureClientPort is not configured (Arshad Mohammad via rakeshr)

  ZOOKEEPER-2269: NullPointerException in RemotePeerBean
  (Arshad Mohammad via rgs)

  ZOOKEEPER-2245: SimpleSysTest test cases fails (Arshad Mohammad via rakeshr)

  ZOOKEEPER-2279: QuorumPeer loadDataBase() error message is incorrect
  (Arshad Mohammad via rakeshr)

  ZOOKEEPER-1803: Add description for pzxid in programmer's guide
  (Arshad Mohammad via rakeshr)

  ZOOKEEPER-2253: C asserts ordering of ping requests, while Java client does not
  (Chris Chen via rgs)

  ZOOKEEPER-2244: On Windows zookeeper fails to restart (Arshad Mohammad via rakeshr)

  ZOOKEEPER-2268: Zookeeper doc creation fails on windows
  (Arshad Mohammad via cnauroth)

  ZOOKEEPER-2281: ZK Server startup fails if there are spaces in the JAVA_HOME