@@ -74,6 +74,9 @@ BUGFIXES:
   ZOOKEEPER-2606: SaslServerCallbackHandler#handleAuthorizeCallback() should log
   the exception (Ted Yu via fpj)
 
+  ZOOKEEPER-2442: Socket leak in QuorumCnxManager connectOne
+  (Michael Han via rakeshr)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-2505: Use shared library instead of static library in C
